.cargo/registry/src/github.com-1ecc6299db9ec823/pin-project-lite-0.1.7/tests/ui/overlapping_unpin_struct.stderr
error[E0277]: `std::marker::PhantomPinned` cannot be unpinned
  --> $DIR/overlapping_unpin_struct.rs:18:5
   |
15 | fn is_unpin<T: Unpin>() {}
   |                ----- required by this bound in `is_unpin`
...
18 |     is_unpin::<Foo<PhantomPinned>>(); //~ ERROR E0277
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ within `_::__Origin<'_, std::marker::PhantomPinned>`, the trait `std::marker::Unpin` is not implemented for `std::marker::PhantomPinned`
   |
   = note: required because it appears within the type `_::__Origin<'_, std::marker::PhantomPinned>`
   = note: required because of the requirements on the impl of `std::marker::Unpin` for `Foo<std::marker::PhantomPinned>`
